# nmoe

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CL_AS_DISTILL.md  LEADERBOARD.json  NOTICE  PROD_RELEASE_PLAN.md  README.md  SPEEDRUN.md  THIRD_PARTY_NOTICES.md  arch_diag.md  moe_flow.md  must_match.md  pyproject.toml
.github/: pull_request_template.md
configs/: dsv2.toml  dsv3.toml  flow_profiles.toml  moonlet.toml  moonlet_profile.toml  moonlight.toml  tasks.toml
configs/deepseek/: 3b.toml  (+3 more)
docker/: Dockerfile.base  Dockerfile.dataprep  Dockerfile.debug  Dockerfile.deps  Dockerfile.dist  Dockerfile.infer  Dockerfile.lab  Dockerfile.nviz  Dockerfile.runner  Dockerfile.system  Dockerfile.train  Makefile
docs/: ARCH_ABLATIONS.md  ARCH_EVAL_SPEC.md  GEOMETRY_AWARE_DORA_SPEC.md  INFERENCE.md  PHYSICS_ABLATION_RESULTS.md  engine-design.md  hp_scaling.md  routing_geometry_artifacts.tex  routing_geometry_blog.md  routing_geometry_spec.tex  serve-inference-rdep-v0.md  serve-overhaul-plan.md  serve-profiling.md  serve-targets.md  serve-testing.md  v2_axes_data_map.md
k8s/: arc-builder-values.yaml  arc-runner-values.yaml  dataprep.yaml  debug.yaml  dist_train.yaml  infer-debug.yaml  lab.yaml  multinode-debug.yaml  nsight-streamer-config.yaml  nsight-streamer.hostnetwork.patch.yaml  nsight-streamer.recreate.patch.json  nsight-streamer.supervisord.conf  nsight-streamer.values.yaml  nviz.yaml  profile-moonlet.yaml  train.yaml
modal/: AGENTS.md  debug.py  image.py  prep.py  train.py
nmoe/: bench_moe_e2e.py  checkpoint.py  config.py  experiments.py  ggemm.py  hp_transfer.py  ks2d.py  log.py  metrics.py  model.py  moe.py  mtp.py  norm.py  opt.py  quant.py  rdep.py  runtime.py  scaling.py  test_blockscaled_dense.py  test_blockscaled_grouped.py  test_gemm_imbalance.py  test_lt_gemm_zero_m.py  test_mla_flash.py  test_mtp.py  test_rdep_backward.py  test_rdep_forward.py  token_bytes.py  train.py  zero2.py
nmoe/rl/tools/codex/python-bindings-src/: Cargo.toml  lib.rs  pyproject.toml
notebooks/: quickstart.ipynb
nviz/: README.md  next.config.ts  package.json
scripts/: bootstrap.sh  cloud.sh
(+497 files in other folders)
