[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmoe"
version = "0.1.0"
description = "B200-targeted Mixture-of-Experts training library with RDEP."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "The NMoE Authors" }]

 # Container-first: the supported install path is via the Dockerfiles in `docker/`.
 # We intentionally do not declare a pip-first dependency graph here.
dependencies = []

[tool.setuptools.packages.find]
include = ["nmoe*"]
namespaces = true

[tool.setuptools.package-data]
"nmoe.data" = ["*.pt", "*.json"]
